// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/search /associations/{input} should return an Association from its Siren 1`] = `
{
  "body": {
    "nbPages": 1,
    "page": 1,
    "resultats": [
      {
        "adresse": {
          "code_postal": "75000",
          "commune": "Paris",
          "numero": "1",
          "type_voie": "RUE",
          "voie": "Général de Gaulle",
        },
        "name": "rna-DEFAULT_ASSOCIATION",
        "nbEtabs": 2,
        "rna": "W000000000",
        "siren": "100000000",
        "siretSiege": "10000000000001",
      },
    ],
    "total": 1,
  },
  "statusCode": 200,
}
`;

exports[`/search /associations/{input} should return an AssociationSearchEntity from its name 1`] = `
{
  "body": {
    "nbPages": 1,
    "page": 1,
    "resultats": [
      {
        "adresse": {
          "code_postal": "75000",
          "commune": "Paris",
          "numero": "1",
          "type_voie": "RUE",
          "voie": "Général de Gaulle",
        },
        "name": "rna-DEFAULT_ASSOCIATION",
        "nbEtabs": 2,
        "rna": "W000000000",
        "siren": "100000000",
        "siretSiege": "10000000000001",
      },
      {
        "adresse": {
          "code_postal": "69000",
          "commune": "Lyon",
          "numero": "2",
          "type_voie": "RUE",
          "voie": "Victor Hugo",
        },
        "name": "rna-LYON ASSOCIATION",
        "nbEtabs": 1,
        "rna": "W200000000",
        "siren": "200000000",
        "siretSiege": "20000000000020",
      },
    ],
    "total": 2,
  },
  "statusCode": 200,
}
`;

exports[`/search /associations/{input} should return other than first page 1`] = `
{
  "body": {
    "nbPages": 1,
    "page": 2,
    "resultats": [],
    "total": 2,
  },
  "statusCode": 200,
}
`;
